--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.4",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/mdx": "^2.0.10",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0-rc20",
+    "embla-carousel-react": "^8.0.0-rc20",
+    "lucide-react": "^0.315.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
