--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -31,6 +31,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Set env
+        run: echo "BASE_URL=$https://sydneyantoni.github.io/prototyp-next.js/" >> $GITHUB_ENV
+      - name: Test
+        run: echo $BASE_URL
       - name: Detect package manager
         id: detect-package-manager
         run: |
