--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/mdx": "^2.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.1",
     "embla-carousel-autoplay": "^8.0.0-rc20",
     "embla-carousel-react": "^8.0.0-rc20",
     "lucide-react": "^0.315.0",
