--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
-    "embla-carousel-autoplay": "^8.0.0-rc20",
-    "embla-carousel-react": "^8.0.0-rc20",
     "lucide-react": "^0.315.0",
     "next": "14.0.4",
     "react": "^18",
@@ -31,6 +29,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.6.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
