--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -32,9 +32,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set env
-        run: echo "BASE_URL=$https://sydneyantoni.github.io/prototyp-next.js/" >> $GITHUB_ENV
+        run: echo "NEXT_PUBLIC_BASE_URL=$https://sydneyantoni.github.io/prototyp-next.js/" >> $GITHUB_ENV
       - name: Test
-        run: echo $BASE_URL
+        run: echo $NEXT_PUBLIC_BASE_URL
       - name: Detect package manager
         id: detect-package-manager
         run: |
