--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set env
-        run: echo "NEXT_PUBLIC_BASE_URL=$/sydneyantoni.github.io/prototyp-next.js/" >> $GITHUB_ENV
+        run: echo "NEXT_PUBLIC_BASE_URL=/sydneyantoni.github.io/prototyp-next.js/" >> $GITHUB_ENV
       - name: Test
         run: echo $NEXT_PUBLIC_BASE_URL
       - name: Detect package manager
