--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"dotenv": "^16.4.1",
+		"eslint-plugin-prettier": "^5.1.3",
 		"lucide-react": "^0.371.0",
 		"next": "14.2.2",
 		"react": "^18",
